Add video link to icra21

--- a/publications.html
+++ b/publications.html
@@ -12,9 +12,10 @@ layout: default
     <ul>
         <li><b>Brian H. Wang</b>, Carlos Diaz-Ruiz, Jacopo Banfi, and Mark Campbell. "Detecting and Mapping Trees in
             Unstructured Environments with a Stereo Camera and Pseudo-Lidar." IEEE International Conference on Robotics
-            and Automation (ICRA), 2021. [<a
-                    href="https://arxiv.org/abs/2103.15967">pdf</a>] [<a
-                    href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
+            and Automation (ICRA), 2021.
+            [<a href="https://arxiv.org/abs/2103.15967">pdf</a>]
+            [<a href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
+            [<a href="https://www.youtube.com/watch?v=9kLyd6wyflE">video presentation</a>]</p>
         </li>
         <li><b>Brian H. Wang</b>, Wei-Lun Chao, Yan Wang, Bharath Hariharan, Kilian Q Weinberger, and Mark Campbell.
             "LDLS: 3-D Object Segmentation Through Label Diffusion From 2-D Images." IEEE Robotics and Automation
