--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@ layout: default
         <li><b>Brian H. Wang</b>, Carlos Diaz-Ruiz, Jacopo Banfi, and Mark Campbell. "Detecting and Mapping Trees in
             Unstructured Environments with a Stereo Camera and Pseudo-Lidar." IEEE International Conference on Robotics
             and Automation (ICRA), 2021.
-            [<a href="https://arxiv.org/abs/2103.15967">pdf</a>]
+            [<a href="https://arxiv.org/pdf/2103.15967.pdf">pdf</a>]
             [<a href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
             [<a href="https://www.youtube.com/watch?v=9kLyd6wyflE">video presentation</a>]</p>
         </li>
