--- a/publications.html
+++ b/publications.html
@@ -7,34 +7,42 @@ layout: default
 </head>
 
 <body>
-<section class="publications">
-    <h2>Publications</h2>
-    <ul>
-        <li><b>Brian H. Wang</b>, Carlos Diaz-Ruiz, Jacopo Banfi, and Mark Campbell. "Detecting and Mapping Trees in
-            Unstructured Environments with a Stereo Camera and Pseudo-Lidar." IEEE International Conference on Robotics
-            and Automation (ICRA), 2021.
-            [<a href="https://arxiv.org/pdf/2103.15967.pdf">pdf</a>]
-            [<a href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
-            [<a href="https://www.youtube.com/watch?v=9kLyd6wyflE">video presentation</a>]</p>
-        </li>
-        <li><b>Brian H. Wang</b>, Wei-Lun Chao, Yan Wang, Bharath Hariharan, Kilian Q Weinberger, and Mark Campbell.
-            "LDLS: 3-D Object Segmentation Through Label Diffusion From 2-D Images." IEEE Robotics and Automation
-            Letters (RA-L), 2019. [<a
-                    href="https://arxiv.org/pdf/1910.13955.pdf">pdf</a>] [<a
+    <section class="publications">
+        <h2>Publications</h2>
+        <ul>
+            <li><b>Brian H. Wang</b>, Beatriz Asfora, Rachel Zheng, Aaron Peng, Jacopo Banfi, and Mark Campbell.
+                "Multiple-Hypothesis Path Planning with Uncertain Object Detections." Arxiv preprint.
+                [<a href="https://arxiv.org/pdf/2103.15967.pdf">pdf</a>]
+                [<a href="https://github.com/brian-h-wang/multiple-hypothesis-planner">code</a>]
+            </li>
+            <li><b>Brian H. Wang</b>, Carlos Diaz-Ruiz, Jacopo Banfi, and Mark Campbell. "Detecting and Mapping Trees in
+                Unstructured Environments with a Stereo Camera and Pseudo-Lidar." IEEE International Conference on
+                Robotics
+                and Automation (ICRA), 2021.
+                [<a href="https://arxiv.org/pdf/2103.15967.pdf">pdf</a>]
+                [<a href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
+                [<a href="https://www.youtube.com/watch?v=9kLyd6wyflE">video presentation</a>]</p>
+            </li>
+            <li><b>Brian H. Wang</b>, Wei-Lun Chao, Yan Wang, Bharath Hariharan, Kilian Q Weinberger, and Mark Campbell.
+                "LDLS: 3-D Object Segmentation Through Label Diffusion From 2-D Images." IEEE Robotics and Automation
+                Letters (RA-L), 2019. [<a href="https://arxiv.org/pdf/1910.13955.pdf">pdf</a>] [<a
                     href="https://github.com/brian-h-wang/LDLS">code</a>]
-        </li>
-        <li>Yan Wang, Zihang Lai, Gao Huang, <b>Brian H. Wang</b>, Laurens van der Maaten, Mark Campbell, and Kilian Q.
-            Weinberger. "Anytime Stereo Image Depth Estimation on Mobile Devices." IEEE International Conference on
-            Robotics and Automation (ICRA), 2019. [<a href="https://arxiv.org/abs/1810.11408">pdf</a>]
-        </li>
-        <li><b>Brian H. Wang</b>, Yan Wang, Kilian Q. Weinberger, and Mark Campbell. "Deep Person Re-identification for
-            Probabilistic Data Association in Multiple Pedestrian Tracking." Arxiv preprint. [<a
+            </li>
+            <li>Yan Wang, Zihang Lai, Gao Huang, <b>Brian H. Wang</b>, Laurens van der Maaten, Mark Campbell, and Kilian
+                Q.
+                Weinberger. "Anytime Stereo Image Depth Estimation on Mobile Devices." IEEE International Conference on
+                Robotics and Automation (ICRA), 2019. [<a href="https://arxiv.org/abs/1810.11408">pdf</a>]
+            </li>
+            <li><b>Brian H. Wang</b>, Yan Wang, Kilian Q. Weinberger, and Mark Campbell. "Deep Person Re-identification
+                for
+                Probabilistic Data Association in Multiple Pedestrian Tracking." Arxiv preprint. [<a
                     href="https://arxiv.org/abs/1810.08565">pdf</a>]
-        </li>
-        <li>Jake R. Gemerek, Silvia Ferrari, <b>Brian H. Wang</b>, and Mark Campbell. "Video-guided Camera Control for
-            Target Tracking and Following." IFAC Conference on Cyber-Physical & Human Systems, 2018.
-        </li>
-    </ul>
-</section>
+            </li>
+            <li>Jake R. Gemerek, Silvia Ferrari, <b>Brian H. Wang</b>, and Mark Campbell. "Video-guided Camera Control
+                for
+                Target Tracking and Following." IFAC Conference on Cyber-Physical & Human Systems, 2018.
+            </li>
+        </ul>
+    </section>
 
 </body>
